--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -415,7 +415,10 @@ List of options
   windowrule = workspace 3,brave-browser
   windowrule = workspace 3,zen-alpha
   windowrulev2 = float,class:^()$,title:^(Picture in picture)$
+  windowrulev2 = float,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
+  windowrulev2 = size 740 440,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
   windowrulev2 = float,class:^(brave)$,title:^(Save File)$
+  windowrulev2 = move onscreen 100%-w-10,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
   windowrulev2 = float,class:^(brave)$,title:^(Open File)$
   windowrulev2 = float,class:^brave-.*-Default$
 
