--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -83,28 +83,28 @@ If you want to mirror a display, add a =,mirror,[NAME]= at the end of the monito
 #+begin_src conf
   # monitor = eDP-1, 1920x1080@60, 0x0,1
   monitor = eDP-1, 2880x1800@60, 0x0,1.5
-  workspace = eDP-1, 1
+  workspace = 1, monitor:eDP-1
 #+end_src
 
 ** Work Setup
 #+begin_src conf
-monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
-monitor = desc:AOC U32E2WG6 QELM5JA000186, 3840x2160@60, 1920x0, 1.5
-monitor = desc:AOC Q3279WG5B 0x000067FB, 2560x1440@60, 1920x0, 1
+  monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
+  monitor = desc:AOC U32E2WG6 QELM5JA000186, 3840x2160@60, 1920x0, 1.5
+  monitor = desc:AOC Q3279WG5B 0x000067FB, 2560x1440@60, 1920x0, 1
 #+end_src
 
 ** Home Setup
 #+begin_src conf
-monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, 1920x0, 1
-monitor = desc:Iiyama North America PL2390 11298JH100788, preferred, -1920x0, 1
+  monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, 1920x0, 1
+  monitor = desc:Iiyama North America PL2390 11298JH100788, preferred, -1920x0, 1
 #+end_src
 
 ** Default Setup
 #+begin_src conf
-monitor = ,1920x1080@60, 1920x0, 1
-# monitor = ,preferred, auto, 1
-# monitor = ,preferred, auto, 1, mirror, eDP-1 # Mirror
-workspace = HDMI-A-1, 2
+  monitor = ,1920x1080@60, 1920x0, 1
+  # monitor = ,preferred, auto, 1
+  # monitor = ,preferred, auto, 1, mirror, eDP-1 # Mirror
+  workspace = 2, monitor:HDMI-A-1
 #+end_src
 
 * STARTUP
