--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -210,6 +210,7 @@ Configure mouse and touchpad here
       numlock_by_default = 1
       touchpad {
           natural_scroll = no
+          scroll_factor = 0.8
       }
       sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
   }
