--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -655,8 +655,7 @@ bind = $mainMod, egrave, focusworkspaceoncurrentmonitor, 7
 bind = $mainMod, underscore, focusworkspaceoncurrentmonitor, 8
 #+end_src
 
-*** Move
-Move workspace to different monitor
+*** Move workspace to different monitor
 #+begin_src conf
 bind=$mainMod ALT,h,movecurrentworkspacetomonitor,l
 bind=$mainMod ALT,j,movecurrentworkspacetomonitor,p
