--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -315,8 +315,8 @@ the more passes, the more you can up the blur_size without noticing artifacts.
       animation = fadeOut        , 1 , 1.46, almostLinear
       animation = fade           , 1 , 3.03, quick
       animation = layers         , 1 , 3.81, easeOutQuint
-      animation = layersIn       , 1 , 4   , easeOutQuint, fade
-      animation = layersOut      , 1 , 1.5 , linear      , fade
+      animation = layersIn       , 1 , 4   , easeOutQuint, slide
+      animation = layersOut      , 1 , 1.5 , linear      , popin
       animation = fadeLayersIn   , 1 , 1.79, almostLinear
       animation = fadeLayersOut  , 1 , 1.39, almostLinear
       animation = workspaces     , 1 , 5   , overshot    , slide
