--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -225,8 +225,8 @@ Configure mouse and touchpad here
   source = ~/.cache/wal/colors-hyprland.conf
 
   general {
-      gaps_in = 2
-      gaps_out = 4
+      gaps_in = 12
+      gaps_out = 20
       border_size = 2
       layout = dwindle
       col.active_border = $color4
@@ -315,13 +315,10 @@ the more passes, the more you can up the blur_size without noticing artifacts.
       animation = fade           , 1 , 3.03, quick
       animation = layers         , 1 , 3.81, easeOutQuint
       animation = layersIn       , 1 , 4   , easeOutQuint, slide
-      animation = layersOut      , 1 , 1.5 , linear      , popin
+      animation = layersOut      , 1 , 1.5 , linear      , slide
       animation = fadeLayersIn   , 1 , 1.79, almostLinear
       animation = fadeLayersOut  , 1 , 1.39, almostLinear
       animation = workspaces     , 1 , 5   , overshot    , slide
-      # animation = workspaces   , 1 , 1.94, almostLinear, fade
-      # animation = workspacesIn , 1 , 1.21, almostLinear, fade
-      # animation = workspacesOut, 1 , 1.94, almostLinear, fade
   }
 #+end_src
 
