--- a/README.org
+++ b/README.org
@@ -39,7 +39,7 @@ stow .
   For theme based on you background you need to install =pywal= and use my custom template for Hyprland
 
 #+begin_src shell :noeval
-  sudo pacman -S hyprland waybar rofi-wayland kitty alacritty dunst dolphin xdg-desktop-portal-hyprland qt5-wayland qt6-wayland hyprpaper hyprlock hypridle chromium ttf-font-awesome vim mako wget unzip gum rsync figlet git network-manager-applet discord webcord ripgrep eza btop tldr waypaper cliphist calcurse swappy grim slurp tesseract tree-sitter imagemagick pavucontrol zsh-syntax-highlighting zsh-history-substring-search zsh-autosuggestions ruby postgresql-libs
+  sudo pacman -S hyprland waybar rofi-wayland kitty alacritty dunst dolphin xdg-desktop-portal-hyprland qt5-wayland qt6-wayland hyprpaper hyprlock hypridle chromium ttf-font-awesome vim mako wget unzip gum rsync figlet git network-manager-applet discord ripgrep eza btop tldr waypaper cliphist calcurse swappy grim slurp tesseract tree-sitter imagemagick pavucontrol zsh-syntax-highlighting zsh-history-substring-search zsh-autosuggestions ruby postgresql-libs
 
   yay -S libgccjit rbenv ruby-build
 #+end_src
