--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -535,7 +535,7 @@ bind = $mainMod CTRL, Print, exec, $screenshot --area
 
 ** Image To Text
 #+begin_src conf
-  bind = $mainMod SHIFT CTRL, S, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
+  bind = $mainMod SHIFT, T, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 #+end_src
 
 ** Image To DrawApp
