--- a/.config/hypr/hyprland.org
+++ b/.config/hypr/hyprland.org
@@ -48,6 +48,7 @@
   - [[#some-nice-mouse-binds][Some nice mouse binds]]
   - [[#function-keys][Function keys]]
   - [[#screenshots][Screenshots]]
+  - [[#screencapture][Screencapture]]
   - [[#image-to-text][Image To Text]]
   - [[#image-to-drawapp][Image To DrawApp]]
   - [[#hyprland][Hyprland]]
@@ -527,6 +528,11 @@ bind = CTRL, Print, exec, $screenshot --in5
 bind = SHIFT, Print, exec, $screenshot --in10
 bind = $mainMod, Print, exec, $screenshot --win
 bind = $mainMod CTRL, Print, exec, $screenshot --area
+#+end_src
+
+** Screencapture
+#+begin_src conf
+  bind = $mainMod CTRL, S, exec, ~/.config/hypr/scripts/screen-capture.sh
 #+end_src
 
 ** Image To Text
